Release 1.21.2-pre2 (snapshot)